--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -51,6 +51,8 @@
     @include tag;
 }
 
+@import 'posts/item', 'posts/sort';
+
 :root{
     font-size: 10px;
 }
@@ -83,45 +85,6 @@ h2{
     font-size: 3.5rem;
     font-weight: bold;
     margin-bottom: 3rem;
-}
-
-.item-container{
-    width: fit-content;
-    padding: 2rem 3rem;
-    border-radius: 20px;
-    box-shadow: 2px 2px 8px rgb(0 0 0 / 0.1);
-
-    .header{
-        @include flex-inline-center;
-        justify-content: space-between;
-        
-        @include user-bold;
-        span{
-            font-size: 1.2rem;
-            color: #888;
-        }
-    }
-
-    h5{
-        font-size: 1.4rem;
-        font-weight: bold;
-        margin: 1.5rem;
-        cursor: pointer;
-    }
-
-    .text{
-        padding: 1rem 2rem;
-        background: #eee;
-        border-radius: 8px;
-        max-width: 400px;
-        font-size: 1.2rem;
-        color: #666;
-        cursor: pointer;
-    }
-
-    .tags{
-        @include tag-shortlist;
-    }
 }
 
 header{
@@ -158,4 +121,61 @@ header{
             }
         }
     }
+}
+
+footer{
+    background: #111;
+    color: #fff;
+    padding: 4rem 0;
+
+        div{
+            margin: 0 auto;
+            @include flex-inline-center;
+            width: fit-content;
+
+            section{
+                width: 400px;
+
+                &.brand{
+                    h1{
+                        width: 100%;
+                        letter-spacing: 0.4px;
+                        margin-bottom: 0.4rem;
+                    }
+            
+                    span{
+                        font-size: 1.4rem;
+                    }
+                }
+
+                &.links{
+                    font-size: 1.4rem;
+
+                    h4{
+                        margin-bottom: 1rem;
+                    }
+
+                    ul{
+                        margin: 0;
+                        padding: 0;
+                        list-style: none;
+                
+                        li{
+                            padding: 0 10px;
+                
+                            a{
+                                font-size: 1.4rem;
+                                text-decoration: none;
+                                color: #ccc;
+                                cursor: pointer;
+                
+                                &:hover{
+                                    color: #999;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
 }
